<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Palestras Coletivas</string>
    <string name="hello_world">Hello world!</string>
    <string name="new_">New</string>
    <string name="refresh">Refresh</string>
    <string name="title_activity_event">EventActivity</string>
    <string name="schedule">Schedule</string>
    <string name="map">Local</string>
	<string name="title_activity_form_event">FormEventActivity</string>
	<string name="event_name">Name:</string>
	<string name="event_name_hint">Tech Event Name</string>
	<string name="event_edition">Edition:</string>
	<string name="event_edition_hint">2014</string>
	<string name="event_description">Description:</string>
	<string name="event_description_hint">Event about technology in actuality</string>
	<string name="event_stocking">Lotação:</string>
	<string name="event_stocking_hint">0</string>
	<string name="event_start_date">Start date:</string>
	<string name="event_start_date_hint"></string>
	<string name="event_days"># event days:</string>
	<string name="event_days_hint">1</string>
	<string name="event_place"># event days:</string>
	<string name="event_place_hint">1</string>
	<string name="event_address">Address:</string>
	<string name="event_address_hint">Rua das Potocas, 1001</string>
	<string name="event_district">District:</string>
	<string name="event_district_hint">Center</string>
	<string name="event_state">State:</string>
	<string name="event_state_hint">PA</string>
	<string name="event_country">Country</string>
	<string name="event_country_hint">Brazil</string>
	<string name="save">Save</string>

</resources>
