<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="${packageName}.${activityClass}" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/event_name" />

        <EditText
            android:id="@+id/event_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/event_name_hint" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/event_edition" />

        <EditText
            android:id="@+id/event_edition"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/event_edition_hint" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/event_description" />

        <EditText
            android:id="@+id/event_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/event_description_hint"
            android:lines="2" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/event_stocking" />

        <EditText
            android:id="@+id/event_stocking"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/event_stocking_hint"
            android:inputType="number" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/event_start_date" />

        <EditText
            android:id="@+id/event_start_date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/event_start_date_hint"
            android:inputType="date" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/event_days" />

        <EditText
            android:id="@+id/event_days"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/event_days_hint"
            android:inputType="number" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/event_place" />

        <EditText
            android:id="@+id/event_place"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/event_place_hint" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/event_address" />

        <EditText
            android:id="@+id/event_address"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/event_address_hint" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/event_district" />

        <EditText
            android:id="@+id/event_district"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/event_district_hint" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/event_state" />

        <EditText
            android:id="@+id/event_state"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/event_state_hint" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/event_name" />

        <EditText
            android:id="@+id/event_country"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/event_country_hint" />

        <Button
            android:id="@+id/btn_save"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/save" />
    </LinearLayout>

</ScrollView>